fix: route body schema

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,8 @@
+# Prisma SQL Database URL
 DATABASE_URL=
+# Google Maps API Key
+GOOGLE_API_KEY=
+# Port for the server to run on
 PORT=
+# JWT just a random string
 JWT_SECRET=
