--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,9 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 .cache
+.DS_Store
+./*.DS_Store
+**/.DS_Store
 
 # Serverless directories
 .serverless/
