--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["*"]
-    }
+    "baseUrl": "./"
   },
   "include": ["src", "tests"]
 }
